added middleware in retailer module
