# final_ims/backend/docs/swagger.json
@@ -2630,36 +2630,25 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "oneOf": [
-                    {
-                      "properties": {
-                        "filename": {},
-                        "message": {
-                          "type": "string"
-                        },
-                        "size": {}
-                      },
-                      "required": [
-                        "message"
-                      ],
-                      "type": "object"
+                  "properties": {
+                    "filename": {},
+                    "message": {
+                      "type": "string"
                     },
-                    {
-                      "properties": {
-                        "filename": {},
-                        "message": {
-                          "type": "string"
-                        },
-                        "size": {}
-                      },
-                      "required": [
-                        "filename",
-                        "message",
-                        "size"
-                      ],
-                      "type": "object"
+                    "mimetype": {},
+                    "size": {},
+                    "url": {
+                      "type": "string"
                     }
-                  ]
+                  },
+                  "required": [
+                    "filename",
+                    "message",
+                    "mimetype",
+                    "size",
+                    "url"
+                  ],
+                  "type": "object"
                 }
               }
             }
@@ -2907,6 +2896,73 @@
         }
       }
     },
+    "/suppliers": {
+      "post": {
+        "tags": [
+          "Suppliers"
+        ],
+        "operationId": "Suppliers_createSupplier",
+        "summary": "Create Supplier",
+        "parameters": [
+          {
+            "$ref": "#/components/parameters/RoleHeader"
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Successful response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/suppliers_supplier_record_interface_SupplierRecord"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad Request"
+          }
+        },
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {}
+            }
+          }
+        }
+      },
+      "get": {
+        "tags": [
+          "Suppliers"
+        ],
+        "operationId": "Suppliers_findAll",
+        "summary": "Find All",
+        "parameters": [
+          {
+            "$ref": "#/components/parameters/RoleHeader"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successful response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "items": {
+                    "$ref": "#/components/schemas/suppliers_supplier_record_interface_SupplierRecord"
+                  },
+                  "type": "array"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad Request"
+          }
+        }
+      }
+    },
     "/suppliers/setup": {
       "post": {
         "tags": [
@@ -2942,38 +2998,6 @@
                 "$ref": "#/components/schemas/suppliers_dto_create_supplier_setup_dto_CreateSupplierSetupDto"
               }
             }
-          }
-        }
-      }
-    },
-    "/suppliers": {
-      "get": {
-        "tags": [
-          "Suppliers"
-        ],
-        "operationId": "Suppliers_findAll",
-        "summary": "Find All",
-        "parameters": [
-          {
-            "$ref": "#/components/parameters/RoleHeader"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Successful response",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "items": {
-                    "$ref": "#/components/schemas/suppliers_supplier_record_interface_SupplierRecord"
-                  },
-                  "type": "array"
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Bad Request"
           }
         }
       }
@@ -3117,6 +3141,53 @@
           },
           "404": {
             "description": "Resource not found"
+          }
+        }
+      },
+      "put": {
+        "tags": [
+          "Suppliers"
+        ],
+        "operationId": "Suppliers_updatePut",
+        "summary": "Update Put",
+        "parameters": [
+          {
+            "$ref": "#/components/parameters/RoleHeader"
+          },
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "description": "Path parameter: id",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successful response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/suppliers_supplier_record_interface_SupplierRecord"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Resource not found"
+          }
+        },
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {}
+            }
           }
         }
       },
